--- a/weatherornot/app/views/session/new_user.html.erb
+++ b/weatherornot/app/views/session/new_user.html.erb
@@ -1,15 +1,10 @@
-<h2> Sign In Test for Weather or Not</h2>
-<% if @error %>
-	<p style='color: red;'>Incorrect email/password</p>
-<%end%>
+FUCK YOU 
 
+<h2> Sign Up Test for Weather or Not</h2>
 <form action="/session" method="POST">
 	<input type="text" name="email" placeholder="Email">
 	<input type="password" name="password" placeholder="Password">
-
+	<input type="text" name="gender" placeholder="Gender">
 	<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-
-	<button> Submit </button>
+	<button> Sign Up </button>
 </form>
-
-
