--- a/weatherornot/app/views/session/new.html.erb
+++ b/weatherornot/app/views/session/new.html.erb
@@ -1,15 +1,17 @@
-<h2> Sign In Test for Weather or Not</h2>
+<h2>Weather or Not</h2>
 <% if @error %>
 	<p style='color: red;'>Incorrect email/password</p>
 <%end%>
 
 <form action="/session" method="POST">
-	<input type="text" name="email" placeholder="Email">
-	<input type="password" name="password" placeholder="Password">
-
-	<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
-
+	<input type="text" name="email" placeholder="Email"> <br>
+	<input type="password" name="password" placeholder="Password"><br>
+	<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden"> <br>
 	<button> Submit </button>
 </form>
+<br>
+<br>
+<br>
+<a href="/register"> Sign Up </a>
 
 
