--- a/weatherornot/app/views/users/new.html.erb
+++ b/weatherornot/app/views/users/new.html.erb
@@ -1,8 +1,17 @@
-<h2> Sign Up Test for Weather or Not</h2>
-<form action="/register" method="POST">
-	<input type="text" name="email" placeholder="Email">
-	<input type="password" name="password" placeholder="Password">
-	<input type="text" name="gender" placeholder="Gender">
-	<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden">
+<h2> Weather or Not</h2>
+
+<a href="/login"> Log In </a>
+
+<br>
+<br>
+  			
+<form action="/register" class="cmxform" method="POST">
+	<fieldset>
+			<input type="text" name="first_name" placeholder="First Name"> <br>
+			<input type="text" name="last_name" placeholder="Last Name"> <br>
+			<input type="text" name="email" placeholder="Email"> <br>
+			<input type="password" name="password" placeholder="Password"> <br>
+			<input type="text" name="gender" placeholder="Gender"> <br>
+			<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden"> <br>
 	<button> Sign Up </button>
 </form>
