--- a/weatherornot/app/views/weather/index.html.erb
+++ b/weatherornot/app/views/weather/index.html.erb
@@ -20,6 +20,22 @@
 	<%= image_tag @weather_lookup.icon %>
 	<%=  @weather_lookup.weekday_name %>
 
+<!-- week -->
+<br>
+	<%=@weather_lookup.day_one %> : <%= @weather_lookup.day_one_condition %>
+<br>
+	<%=@weather_lookup.day_two %> : <%= @weather_lookup.day_two_condition %>
+<br>
+	<%=@weather_lookup.day_three %> : <%= @weather_lookup.day_three_condition %>
+<br>
+	<%=@weather_lookup.day_four %> : <%= @weather_lookup.day_four_condition %>
+<br>
+	<%=@weather_lookup.day_five %> : <%= @weather_lookup.day_five_condition %>
+<br>
+	<%=@weather_lookup.day_six %> : <%= @weather_lookup.day_six_condition %>
+<br>
+	<%=@weather_lookup.day_seven %> : <%= @weather_lookup.day_seven_condition %>
+
 <br>
 <br>
 
