--- a/weatherornot/app/views/layouts/application.html.erb
+++ b/weatherornot/app/views/layouts/application.html.erb
@@ -2,9 +2,14 @@
 <html>
 <head>
   <title>weather or not</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+	<link rel="stylesheet" href="http://bootswatch.com/cerulean/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
 </head>
 <body>
 
