--- a/weatherornot/app/views/weather/show.html.erb
+++ b/weatherornot/app/views/weather/show.html.erb
@@ -1,4 +1,14 @@
+<form action="/forecast" method="GET">
+	<label>
+		Zip:
+		<input type="text" placeholder="(e.g. : 101075, 07003, etc)" name="zip" />
+	</label>
+	<button>Submit</button>
+</form>
 
+<br>
+<a href="/welcome"> Back </a>
+<br>
 <!-- shows current weather -->
 Current:
 <br>
