users/non users can see weather

--- a/weatherornot/app/views/weather/new.html.erb
+++ b/weatherornot/app/views/weather/new.html.erb
@@ -4,21 +4,28 @@
 	<meta charset="UTF-8">
 	<title> </title>
 
+<a href="/login"> Log In </a>
+<br>
+<a href="/register"> Sign Up </a>
+
 </head>
 <body>
+
+<br>
 
 <!-- search by zip code -->
 <!-- <form> -->	
 	<label>
 		Zip:
-		<input type="text" id="zipcode" class="zipcode" placeholder="(e.g. : 101075, 07003, etc)" name="zip" />
+		<input type="text" id="zipcode_1" class="zipcode_1" placeholder="(e.g. : 101075, 07003, etc)" name="zip" />
 	</label>
-	<button id="search">Search</button>
+	<button id="search_1">Search</button>
 <!-- </form> -->
 
 
 <!-- weather content goes into empty div -->
-<ul id="weather" class="weather">
+
+<ul id="weather_1" class="weather_1">
 
 </ul>
 
