--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-	<link rel="stylesheet" href="http://fgnass.github.io/spin.js/spin.min.js">	
-	<link rel="stylesheet" href="http://bootswatch.com/cerulean/bootstrap.min.css">
+	<link rel="stylesheet" href="https://fgnass.github.io/spin.js/spin.min.js">	
+	<link rel="stylesheet" href="https://bootswatch.com/cerulean/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
 </head>
