--- a/Copy of Weatherornot/weatherornot/app/views/weather/new.html.erb
+++ b/Copy of Weatherornot/weatherornot/app/views/weather/new.html.erb
@@ -4,12 +4,22 @@
 	<meta charset="UTF-8">
 	<title> </title>
 
+<div class="container">
 	<div class="row">
 		<header>
-			<div class="col-md-4 col-md-offset-4 center-text">
+			<div class="col-md-4 col-xs-offset-4 center-text">
 					<h1>weatherornot</h1>
 			</div>
-						
+			
+			<br>
+			
+			<div class="col-xs-2 col-xs-offset-2">
+			 <br>
+					<span> <a href="/login"> Log In </a> </span><a href="/register"> Sign Up </a>
+			</div>
+	</div>
+</div>
+
 			<div class="col-md-4 col-md-offset-4 center-text">
 					<label>
 						Zip:
@@ -17,31 +27,18 @@
 					</label>
 					<button id="search_1">Search</button>
 			</div>
-
-			
-			<div class="col-md-2 col-xs-offset-9 center-text">
-					<p><span> <a href="/login"> Log In </a> <br>
-					</span><a href="/register"> Sign Up </a></p> 
-			</div>
-
-		</header>
-	</div>
-
+			<br>
+	
+	</header>
+</div>
 
 <hr>
 </head>
+
 <body>
    
-
-
-<!-- weather content goes into empty div -->
-
 <div id="customSpinner" class="customSpinner"> 
 </div>
-
-
-
-
 
 
 </body>
