--- a/Copy of Weatherornot/weatherornot/app/views/users/new.html.erb
+++ b/Copy of Weatherornot/weatherornot/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<h2> Weather or Not</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<h2> weatherornot</h2>
+</head>
+<body>
 
 <a href="/login"> Log In </a>
 
@@ -14,3 +20,6 @@
 			<input name="authenticity_token" value="<%= form_authenticity_token() %>" type="hidden"> <br>
 	<button> Sign Up </button>
 </form>
+
+</body>
+</html>
